# CourseTDDFastApiAWS

.github/workflows/: main.yml
services/talk_booking/: bandit.yml  pyproject.toml
services/talk_booking/.github/workflows/: main.yml
services/talk_booking/tests/integration/test_web_app/: test_main.py
services/talk_booking/web_app/: main.py
